[metadata]
name = pymvptree
author = Roberto Abdelkader Martínez Pérez
author-email = robertomartinezp@gmail.com
summary = Python wrapper for mvptree library.
description-file = README
home-page = https://github.com/nilp0inter/pymvptree
license = GPLv3
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    mvptree
[files]
packages =
    pymvptree
